extends Area2D

signal player_apply_duct_tape
signal player_apply_cement
signal wall_selected

func _ready():
	# Called when the node is added to the scene for the first time.
	# Initialization here
	pass

#func _process(delta):
#	# Called every frame. Delta is time since last frame.
#	# Update game logic here.
#	pass
